# HawkesNest

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  NOTICE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: benchmark_suites.md  custom_dgp.md  development_notes.md  docker.md  output_schema.md  paper_reproduction.md  quickstart.md  recipes.md  seahorse_integration.md  visualization.md
examples/: generate_entanglement.py  generate_heterogeneity.py
hawkesnest/: cli.py  config.py
hawkesnest/background/: __init__.py  base.py  constant.py  hetero_ladder.py  regime_switch.py  spatial.py  spatiotemporal.py  temporal.py
hawkesnest/config_factory/: __init__.py  background_configs.py  domain_configs.py  functions.py  graph_configs.py  kernel_configs.py
hawkesnest/datasets/: base.py  entanglement.py
hawkesnest/domain/: __init__.py  barrier.py  base.py  manhatten.py  network.py  standard.py  topology_utils.py
hawkesnest/experiments/: __init__.py  complexity.py
hawkesnest/export/: __init__.py  csv.py  jsonl.py  metadata.py
hawkesnest/graph/: __init__.py  branching.py  interactions.py  utils.py
hawkesnest/kernel/: __init__.py  base.py  entangled.py  geo.py  network.py  rough.py  separable.py  two_scale.py  wave.py
hawkesnest/metrics/: __init__.py  entangelment.py  graph.py  heterogeneity.py  kernel.py  topology.py
notebooks/: 01_quickstart.ipynb  02_entanglement_suite.ipynb  03_heterogeneity_suite.ipynb  04_custom_dgp_design.ipynb
scripts/: gen_suite3_entanglement.py  gen_suite4_heterogeneity.py  smoke.py  suite_utils.py  sweeps_complexity.py  validate_suites.py
tests/: test_background.py  test_cli.py  test_graph_metrics  test_kernel_metrics.py  test_simulator.py  test_suites_public_api.py  test_temporal.py  test_topology.py
(+26 files in other folders)
